django static files

--- a/copy/nginx.conf
+++ b/copy/nginx.conf
@@ -42,6 +42,10 @@ http {
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
 
+    location /static/ {
+      alias /static/;
+    }
+
     location / {
       uwsgi_pass django;
       include /etc/nginx/uwsgi_params;
