--- a/copy/nginx.dev.conf
+++ b/copy/nginx.dev.conf
@@ -35,8 +35,8 @@ http {
   server {
     listen 443;
     ssl on;
-    ssl_certificate /.env.files/certificate.crt;
-    ssl_certificate_key /.env.files/certificate.key;
+    ssl_certificate /run/secrets/certificate.crt;
+    ssl_certificate_key /run/secrets/certificate.key;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers 'AES128+EECDH:AES128+EDH';
     ssl_prefer_server_ciphers on;
