dev mode by default

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 COMPOSE_FILE=docker-compose.yml:docker-compose.dev.yml
-# DEV_MODE=true
+DEV_MODE=true
 INSECURE_FILES_ALLOWED=true
 
 COMPOSE_PROJECT_NAME=gstack
