--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ networks:
 
 services:
   postgres:
-    image: ${REGISTRY_URL}/${COMPOSE_PROJECT_NAME}:${IMAGE_TAG}
+    image: ${IMAGE_NAME_PREFIX}-main:${IMAGE_TAG}
     env_file: .env
     volumes:
       - "data:/data"
@@ -22,7 +22,7 @@ services:
       - "127.0.0.1:5432:5432"
 
   django:
-    image: ${REGISTRY_URL}/${COMPOSE_PROJECT_NAME}:${IMAGE_TAG}
+    image: ${IMAGE_NAME_PREFIX}-main:${IMAGE_TAG}
     env_file: .env
     depends_on: ["postgres"]
     command: ["django"]
@@ -30,7 +30,7 @@ services:
       - "./.secrets/django:/run/secrets:ro"
 
   nginx:
-    image: ${REGISTRY_URL}/${COMPOSE_PROJECT_NAME}:${IMAGE_TAG}
+    image: ${IMAGE_NAME_PREFIX}-main:${IMAGE_TAG}
     env_file: .env
     depends_on: ["django"]
     command: ["nginx"]
