Refactored most parts

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,13 @@
-.git
-.env
-.secrets
-static/.gitignore
+/.git
+
+/.env
+/.secret.env
+
+**/*.pyc
+**/__pycache__
+
+/backup
+/.files
+/.coverage
+/django_project/*/static
+/js_client
