added debug toolbar

--- a/docker/main/Dockerfile
+++ b/docker/main/Dockerfile
@@ -34,9 +34,10 @@ RUN apt-get install -y python3.6-dev
 
 # pip packages
 RUN pip install --no-cache-dir \
-  django==2.1 \
+  django==2.1.1 \
   psycopg2-binary==2.7.5 \
-  uwsgi==2.0.17
+  uwsgi==2.0.17.1 \
+  django-debug-toolbar==1.10
 
 # nginx
 RUN groupadd -r nginx --gid=4430 && useradd -r -g nginx --uid=4430 nginx
