--- a/docker/main/Dockerfile
+++ b/docker/main/Dockerfile
@@ -37,7 +37,9 @@ RUN pip install --no-cache-dir \
   django==2.1.1 \
   psycopg2-binary==2.7.5 \
   uwsgi==2.0.17.1 \
-  django-debug-toolbar==1.10
+  django-debug-toolbar==1.10 \
+  django-sql-explorer==1.1.2 \
+  XlsxWriter==1.1.0
 
 # nginx
 RUN groupadd -r nginx --gid=4430 && useradd -r -g nginx --uid=4430 nginx
