added automate test process

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -71,7 +71,7 @@ http {
     }
 
     # location /coverage {
-    #   alias /data/coverage_report;
+    #   alias /src/static/coverage_report;
     # }
 
     # location /docs {
