--- a/conf/nginx.dev.conf
+++ b/conf/nginx.dev.conf
@@ -67,6 +67,10 @@ http {
       proxy_pass http://build_js:3000;
     }
 
+    location /coverage {
+      alias /src/static/coverage_report;
+    }
+
     # location /docs {
     #   alias /src/docs/build;
     # }
