--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -39,3 +39,9 @@ services:
       - ".:/src"
     logging:
       driver: json-file
+
+  tasks:
+    volumes:
+      - ".:/src"
+    logging:
+      driver: json-file
