add sphinx documentations

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -70,13 +70,13 @@ http {
       index index.html;
     }
 
-    # location /coverage {
-    #   alias /src/static/coverage_report;
-    # }
+    location /coverage {
+      alias /src/static/coverage_report;
+    }
 
-    # location /docs {
-    #   alias /src/docs/build;
-    # }
+    location /docs {
+      alias /src/docs/build;
+    }
 
     # location /ws/ {
     #   proxy_pass http://daphne;
