--- a/conf/nginx.dev.conf
+++ b/conf/nginx.dev.conf
@@ -71,9 +71,9 @@ http {
       alias /src/static/coverage_report;
     }
 
-    # location /docs {
-    #   alias /src/docs/build;
-    # }
+    location /docs {
+      alias /src/docs/build;
+    }
 
     # location /ws/ {
     #   proxy_pass http://django;
