no apt-get install without apt-get update

--- a/docker/main/Dockerfile
+++ b/docker/main/Dockerfile
@@ -3,8 +3,7 @@ FROM ubuntu:bionic-20180821
 ENV DEBIAN_FRONTEND noninteractive
 
 # locales
-RUN apt-get update
-RUN apt-get install -y locales wget latexmk build-essential rsync gettext
+RUN apt-get update && apt-get install -y locales wget latexmk build-essential rsync gettext
 RUN localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
 ENV LANG en_US.utf8
 
@@ -23,14 +22,14 @@ RUN find /texlive/texmf-var -type d -exec chmod 777 {} +
 # postgres
 ENV PG_MAJOR 10
 RUN groupadd -r postgres --gid=999 && useradd -r -g postgres --uid=999 postgres
-RUN apt-get install -y postgresql-common
+RUN apt-get update && apt-get install -y postgresql-common
 RUN sed -ri 's/#(create_main_cluster) .*$/\1 = false/' /etc/postgresql-common/createcluster.conf
-RUN apt-get install -y postgresql-$PG_MAJOR
+RUN apt-get update && apt-get install -y postgresql-$PG_MAJOR
 ENV PATH $PATH:/usr/lib/postgresql/$PG_MAJOR/bin
 ENV PGDATA /data/postgres
 
 # python
-RUN apt-get install -y python3.6 python3-venv
+RUN apt-get update && apt-get install -y python3.6 python3-venv
 RUN python3.6 -m venv /python
 ENV PATH /python/bin:$PATH
 ENV PYTHONPATH /src/django_project/
@@ -41,10 +40,11 @@ RUN groupadd -r django --gid=8000 && useradd -r -m -g django --uid=8000 django
 ENV DJANGO_SETTINGS_MODULE core.settings
 
 # uwsgi
-RUN apt-get install -y build-essential
-RUN apt-get install -y python3.6-dev
-RUN apt-get install -y gcc
-RUN apt-get install -y git
+RUN apt-get update && apt-get install -y \
+  build-essential \
+  python3.6-dev \
+  gcc \
+  git
 
 # pip packages
 RUN pip install --no-cache-dir \
@@ -65,7 +65,7 @@ RUN pip install --no-cache-dir \
 
 # nginx
 RUN groupadd -r nginx --gid=4430 && useradd -r -g nginx --uid=4430 nginx
-RUN apt-get install -y nginx
+RUN apt-get update && apt-get install -y nginx
 RUN ln -sf /dev/stdout /var/log/nginx/access.log
 
 # copy
