Added REST Framework to the project

--- a/conf/nginx.dev.conf
+++ b/conf/nginx.dev.conf
@@ -48,7 +48,7 @@ http {
       alias /data/files/media;
     }
 
-    location ~ ^/(api|admin|assets|media|explorer) {
+    location ~ ^/(api|admin|assets|media|explorer|rest-auth) {
       proxy_pass http://django;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
