--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -52,7 +52,7 @@ http {
       alias /data/files/media;
     }
 
-    location ~ ^/(api|admin|media) {
+    location ~ ^/(api|admin|media|explorer|rest-auth) {
       uwsgi_pass uwsgi://django;
       include /etc/nginx/uwsgi_params;
       uwsgi_param Host $host;
