--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -78,16 +78,16 @@ http {
       alias /src/docs/build;
     }
 
-    # location /ws/ {
-    #   proxy_pass http://daphne;
-    #   proxy_http_version 1.1;
-    #
-    #   proxy_set_header Upgrade $http_upgrade;
-    #   proxy_set_header Connection "upgrade";
-    #   proxy_set_header Host $host;
-    #   proxy_set_header X-Real-IP $remote_addr;
-    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #   proxy_set_header X-Forwarded-Host $server_name;
-    # }
+    location /ws/ {
+      proxy_pass http://daphne;
+      proxy_http_version 1.1;
+
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Host $server_name;
+    }
   }
 }
