--- a/conf/nginx.dev.conf
+++ b/conf/nginx.dev.conf
@@ -48,7 +48,7 @@ http {
       alias /data/files/media;
     }
 
-    location ~ ^/(api|admin|assets|media|explorer|rest-auth|__debug__) {
+    location ~ ^/(api|admin|assets|media|explorer|rest-auth|__debug__|django-channels) {
       proxy_pass http://django;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
