--- a/conf/postgresql.conf
+++ b/conf/postgresql.conf
@@ -3,9 +3,9 @@ unix_socket_directories = ''
 port = 5432
 max_connections = 100
 ssl = on
-ssl_ca_file = '/ca.crt'
-ssl_cert_file = '/server.crt'
-ssl_key_file = '/server.key'
+ssl_ca_file = '/run/secrets/PG_CLIENT_SSL_CACERT'
+ssl_cert_file = '/run/secrets/PG_SERVER_SSL_CERT'
+ssl_key_file = '/run/secrets/PG_SERVER_SSL_KEY'
 
 shared_buffers = 128MB
 
