--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -46,14 +46,14 @@ services:
     env_file: .env
     command: ["npm", "start"]
 
-  backup:
-    volumes:
-      - ".:/src"
-    logging:
-      driver: json-file
-
-  tasks:
-    volumes:
-      - ".:/src"
-    logging:
-      driver: json-file
+  # backup:
+  #   volumes:
+  #     - ".:/src"
+  #   logging:
+  #     driver: json-file
+  #
+  # tasks:
+  #   volumes:
+  #     - ".:/src"
+  #   logging:
+  #     driver: json-file
