--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -39,8 +39,8 @@ http {
   server {
     listen 443;
     ssl on;
-    ssl_certificate /certificate.crt;
-    ssl_certificate_key /certificate.key;
+    ssl_certificate /run/secrets/SITE_SSL_CERT;
+    ssl_certificate_key /run/secrets/SITE_SSL_KEY;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers 'AES128+EECDH:AES128+EDH';
     ssl_prefer_server_ciphers on;
