--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-.env
-.secret.env
-
-*.pyc
-__pycache__
-
-.coverage
+/.env
+/.secret.env
+/.files
 /backup
 /static
 /docs/build
+/.coverage
+
+__pycache__
