--- a/conf/secrets.yml
+++ b/conf/secrets.yml
@@ -1,5 +1,6 @@
 PG_SERVER_SSL_CACERT:
   - django
+  - backup
 PG_SERVER_SSL_KEY:
   - postgres
 PG_SERVER_SSL_CERT:
@@ -8,13 +9,18 @@ PG_CLIENT_SSL_CACERT:
   - postgres
 PG_CLIENT_SSL_KEY:
   - django
+  - backup
 PG_CLIENT_SSL_CERT:
   - django
+  - backup
 DB_PASSWORD_POSTGRES:
+  - backup
 DB_PASSWORD_DJANGO:
   - django
+  - backup
 DB_PASSWORD_EXPLORER:
   - django
+  - backup
 SITE_SSL_KEY:
   - nginx
 SITE_SSL_CERT:
