--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ networks:
 
 services:
   postgres:
-    image: ${REGISTRY_URL}/${COMPOSE_PROJECT_NAME}-main:${VERSION}
+    image: ${REGISTRY_URL}/${IMAGE_BASENAME}-main:${VERSION}
     container_name: ${COMPOSE_PROJECT_NAME}-postgres
     command: ["postgres"]
     volumes:
@@ -18,12 +18,12 @@ services:
     ports:
       - "127.0.0.1:5432:5432"
     logging:
-      driver: syslog
+      driver: ${LOG_DRIVER}
       options:
         tag: "docker/${COMPOSE_PROJECT_NAME}-postgres"
 
   django:
-    image: ${REGISTRY_URL}/${COMPOSE_PROJECT_NAME}-main:${VERSION}
+    image: ${REGISTRY_URL}/${IMAGE_BASENAME}-main:${VERSION}
     container_name: ${COMPOSE_PROJECT_NAME}-django
     command: ["django"]
     depends_on: ["postgres"]
@@ -32,12 +32,12 @@ services:
       - "./.secret.env:/src/.secret.env"
     env_file: .env
     logging:
-      driver: syslog
+      driver: ${LOG_DRIVER}
       options:
         tag: "docker/${COMPOSE_PROJECT_NAME}-django"
 
   nginx:
-    image: ${REGISTRY_URL}/${COMPOSE_PROJECT_NAME}-main:${VERSION}
+    image: ${REGISTRY_URL}/${IMAGE_BASENAME}-main:${VERSION}
     container_name: ${COMPOSE_PROJECT_NAME}-nginx
     depends_on: ["django"]
     command: ["nginx"]
@@ -49,33 +49,12 @@ services:
       - "${SERVER_IP}:80:80"
       - "${SERVER_IP}:443:443"
     logging:
-      driver: syslog
+      driver: ${LOG_DRIVER}
       options:
         tag: "docker/${COMPOSE_PROJECT_NAME}-nginx"
 
-  redis:
-    image: ${REGISTRY_URL}/${COMPOSE_PROJECT_NAME}-main:${VERSION}
-    container_name: ${COMPOSE_PROJECT_NAME}-redis
-    command: ["redis"]
-    logging:
-      driver: syslog
-      options:
-        tag: "docker/${COMPOSE_PROJECT_NAME}-redis"
-
-  daphne:
-    image: ${REGISTRY_URL}/${COMPOSE_PROJECT_NAME}-main:${VERSION}
-    container_name: ${COMPOSE_PROJECT_NAME}-daphne
-    command: ["daphne"]
-    env_file: .env
-    volumes:
-      - "./.secret.env:/src/.secret.env"
-    logging:
-      driver: syslog
-      options:
-        tag: "docker/${COMPOSE_PROJECT_NAME}-daphne"
-
   backup:
-    image: ${REGISTRY_URL}/${COMPOSE_PROJECT_NAME}-main:${VERSION}
+    image: ${REGISTRY_URL}/${IMAGE_BASENAME}-main:${VERSION}
     container_name: ${COMPOSE_PROJECT_NAME}-backup
     command: ["backup_daemon"]
     depends_on: ["postgres"]
@@ -85,19 +64,6 @@ services:
       - "./backup:/src/backup"
     env_file: .env
     logging:
-      driver: syslog
+      driver: ${LOG_DRIVER}
       options:
         tag: "docker/${COMPOSE_PROJECT_NAME}-backup"
-
-  # tasks:
-  #   image: ${REGISTRY_URL}/${COMPOSE_PROJECT_NAME}-main:${VERSION}
-  #   container_name: ${COMPOSE_PROJECT_NAME}-tasks
-  #   command: ["with_django", "/src/tasks/tasks.py"]
-  #   depends_on: ["postgres"]
-  #   volumes:
-  #     - "./.secret.env:/src/.secret.env"
-  #   env_file: .env
-  #   logging:
-  #     driver: syslog
-  #     options:
-  #       tag: "docker/${COMPOSE_PROJECT_NAME}-tasks"
