--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,9 +2,8 @@
 #
 
 # You can set these variables from the command line.
-SPHINXOPTS    = -E -a
+SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
-SPHINXPROJ    = gStack
 SOURCEDIR     = source
 BUILDDIR      = build
 
@@ -12,14 +11,9 @@ BUILDDIR      = build
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-latexpdf:
-	rm -rf "$(BUILDDIR)/latex"
-	$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
-
 .PHONY: help Makefile
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
-	rm -rf "$(BUILDDIR)/$@"
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
